# loemby

./: .cnb.yml  .env  .gitignore  LICENSE  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.codebuddy/: AGENT.md
.github/workflows/: build.yml  sync.yml
.ide/: .cnb.yml  Dockerfile
docs/: ass_style_explain.md  data-sync.md  mpv-prefetch.md  problem.md
src/: main.ts  style.css
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.beta.conf.json  tauri.conf.json  tauri.dev.beta.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 2025-09-05-01.sql
src-tauri/migrations/postgres/: 2025_09_05_01.sql  2026_05_05_01.sql
src-tauri/migrations/sqlite/: 2025_09_05_01.sql  2026_05_05_01.sql
src-tauri/resources/config/: app-config.default.json
src-tauri/resources/mpv/keymap/: README.md  keymap.json
src-tauri/resources/mpv/portable_config/: input.conf  mpv.conf
src-tauri/resources/mpv/portable_config/scripts/: cache-speed.lua  cache_speed.lua
src-tauri/resources/mpv_script/: mpv-network-speed.lua
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: app_config.rs  app_state.rs  db.rs  db_migrations.rs  db_pool.rs  http_pool.rs  http_traffic_middleware.rs  log.rs  mod.rs  runtime_config.rs
src-tauri/src/controller/: app_http_ctl.rs  emby_http_ctl.rs  emby_icon_library_ctl.rs  emby_line_ctl.rs  emby_server_ctl.rs  global_config_ctl.rs  invoke_ctl.rs  mod.rs  play_history_ctl.rs  proxy_server_ctl.rs  trakt_http_ctl.rs
src-tauri/src/http/: emby_http.rs  mod.rs
src-tauri/src/mapper/: emby_icon_library_mapper.rs  emby_line_mapper.rs  emby_server_mapper.rs  global_config_mapper.rs  mod.rs  play_history_mapper.rs  proxy_server_mapper.rs
src-tauri/src/service/: app_http_svc.rs  axum_svc.rs  cache_svc.rs  emby_http_svc.rs  http_forward.rs  http_forward_svc.rs  mod.rs  player_svc.rs  proxy_svc.rs  simkl_http_svc.rs  trakt_http_svc.rs  updater_svc.rs  yamtrack_http_svc.rs
src-tauri/src/util/: file_util.rs  media_source_util.rs  mod.rs
src/api/: appApi.ts  embyApi.ts  invoke.ts  invokeApi.ts  traktApi.ts
src/components/: ItemCard.vue  NavMenu.vue
src/icon/: emby.vue
src/page/: EmbyHome.vue  History.vue  Search.vue  Search_bak.vue  Setting.vue
src/page/emby/: Episodes.vue  Home.vue  MediaLibrary.vue  MediaLibraryItems.vue  Search.vue  Series.vue
src/router/: router.ts
src/store/: _config.ts  cache.ts  config.ts  db.ts  eventBus.ts  image.ts  notifyCenter.ts  playback.ts  runtimeConfig.ts  tauriNotify.ts
src/store/db/: embyIconLibrary.ts  embyLine.ts  embyServer.ts  globalConfig.ts  playHistory.ts  proxyServer.ts
src/svg/: index.vue
src/types/: vue3-smooth-dnd.d.ts
src/util/: os_util.ts  play_info_util.ts  sleep.ts  str_util.ts  updater_util.ts  uuid_util.ts
