[package]
name = "loemby"
version = "0.27.5"
description = "Emby Client"
authors = ["NPCDW"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loemby_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
regex = "1.11.2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.9.0"

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin = "2.4.0"

tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tokio-stream = "0.1.17"
interprocess = { version = "2.2.3", features = ["tokio"] }
axum = "0.8.4"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "macros", "chrono", "json", "migrate" ] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde-inline-default = "1.0.0"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2.3"

anyhow = "1.0.99"

time = "0.3.43"
chrono = { version = "0.4.42", features = ["serde"] }

sha256 = "1.6.0"

uuid = { version = "1.18.1", features = ["v4"] }

rust_decimal = "1.37.2"

reqwest = { version = "0.12.23", features = ["json", "stream", "socks"] }
urlencoding = "2.1.3"

sys-info = "0.9.1"

webbrowser = "1.0.5"
