[package]
name = "loemby"
version = "0.34.6"
description = "Emby Client"
authors = ["NPCDW"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loemby_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
regex = "1.12.2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.9.0"

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin = "2.5.2"

tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
interprocess = { version = "2.2.3", features = ["tokio"] }
axum = "0.8.8"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "macros", "chrono", "json", "migrate" ] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-inline-default = "1.0.0"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2.4"

anyhow = "1.0.100"

time = "0.3.45"
chrono = { version = "0.4.43", features = ["serde"] }

sha256 = "1.6.0"

uuid = { version = "1.19.0", features = ["v4"] }

rust_decimal = "1.40.0"

reqwest = { version = "0.13.1", features = ["json", "stream", "socks"] }
urlencoding = "2.1.3"
url = "2.5.8"

sys-info = "0.9.1"

open = "5.3.3"
